--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "promise-mysql": "^5.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.15"
   }
 }
