--- a/package.json
+++ b/package.json
@@ -6,27 +6,35 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -w",
-    "dev": "nodemon build/index.js"
+    "dev": "nodemon build/index.js",
+    "start": "node build/index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/urben88/api-peliculas-express.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ruben Esteve Vicente",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/urben88/api-peliculas-express/issues"
   },
   "homepage": "https://github.com/urben88/api-peliculas-express#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "promise-mysql": "^3.3.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.8",
+    "@babel/node": "^7.16.8",
+    "@babel/preset-env": "^7.16.11",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
