--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -w",
-    "dev": "nodemon build/index.js",
+    "dev": "nodemon build/src/index.js",
     "start": "node build/index.js"
   },
   "repository": {
@@ -28,7 +28,9 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "promise-mysql": "^3.3.1"
+    "mysql2": "^2.3.3",
+    "promise-mysql": "^3.3.1",
+    "sequelize": "^6.17.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
@@ -38,6 +40,8 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
-    "nodemon": "^2.0.15"
+    "@types/node": "^17.0.23",
+    "nodemon": "^2.0.15",
+    "sequelize-cli": "^6.4.1"
   }
 }
