Creo el auth (registrando usuarios y generando token en login) Cambio el codigo por deafult del cli

--- a/.env
+++ b/.env
@@ -13,3 +13,8 @@ MYSQLDB_LOCAL_PORT=3306
 MYSQLDB_DOCKER_PORT=3306
 NODE_LOCAL_PORT=3000
 NODE_DOCKER_PORT=3000
+
+#Auth Config
+AUTH_SECRET=troloo
+AUTH_SECRET=1d
+AUTH_ROUNDS=10
