--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/urben88/api-peliculas-express#readme",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/sequelize": "^4.28.11",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -39,6 +42,8 @@
     "@babel/preset-env": "^7.16.11",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-jwt": "^6.0.4",
+    "@types/express-unless": "^0.5.3",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.23",
     "nodemon": "^2.0.15",
