--- a/.sequelizerc
+++ b/.sequelizerc
@@ -4,6 +4,6 @@ const path = require('path');
 module.exports = {
   'config': path.resolve('build','config','database.js'),
   'models-path': path.resolve('src','database', 'models'),
-  'seeders-path': path.resolve('src','database', 'seeders'),
+  'seeders-path': path.resolve('build','src','database', 'seeders'),
   'migrations-path': path.resolve('src','database', 'migrations')
 };
