--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ DB_PORT=3306
 EXPRESS_PORT=3000
 
 #Docker variables
+MYSQLDB_HOST=127.0.0.1
 MYSQLDB_USER=root
 MYSQLDB_ROOT_PASSWORD=urben
 MYSQLDB_DATABASE=peliculasexpress
