--- a/.env
+++ b/.env
@@ -6,10 +6,18 @@ DB_PORT=3306
 EXPRESS_PORT=3000
 
 #Docker variables
-MYSQLDB_HOST=127.0.0.1
-MYSQLDB_USER=root
-MYSQLDB_ROOT_PASSWORD=urben
-MYSQLDB_DATABASE=peliculasexpress
+
+#!Para local
+# MYSQLDB_HOST=127.0.0.1
+# MYSQLDB_USER=root
+# MYSQLDB_ROOT_PASSWORD=urben
+# MYSQLDB_DATABASE=peliculasexpress
+#!Para producción
+MYSQLDB_HOST=pelucas-solidarias.corry4jqcr9s.eu-west-3.rds.amazonaws.com
+MYSQLDB_USER=urben
+MYSQLDB_ROOT_PASSWORD=129622ru
+MYSQLDB_DATABASE=pelucasexpress
+
 MYSQLDB_LOCAL_PORT=3306
 MYSQLDB_DOCKER_PORT=3306
 NODE_LOCAL_PORT=3000
