--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -w",
     "dev": "nodemon build/src/index.js",
-    "start": "node build/index.js"
+    "prod": "babel src --out-dir dist",
+    "start": "node build/src/index.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/sequelize": "^4.28.11",
     "bcryptjs": "^2.4.3",
+    "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
