Añado postman, cambio seeders y preparo el .env y docker compose

--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=peliculasexpress
-DB_PORT=3306
-EXPRESS_PORT=3000
+# DB_HOST=localhost
+# DB_USER=root
+# DB_PASSWORD=
+# DB_NAME=peliculasexpress
+# DB_PORT=3306
+# EXPRESS_PORT=3000
 
 #Docker variables
 
 #!Para local
-MYSQLDB_HOST=127.0.0.1
-MYSQLDB_USER=root
-MYSQLDB_ROOT_PASSWORD=urben
-MYSQLDB_DATABASE=peliculasexpress
+# MYSQLDB_HOST=127.0.0.1
+# MYSQLDB_USER=root
+# MYSQLDB_ROOT_PASSWORD=urben
+# MYSQLDB_DATABASE=peliculasexpress
 
 #!Para producción
 MYSQLDB_HOST=pelucas-solidarias.corry4jqcr9s.eu-west-3.rds.amazonaws.com
@@ -19,8 +19,8 @@ MYSQLDB_USER=urben
 MYSQLDB_ROOT_PASSWORD=pelucas88
 MYSQLDB_DATABASE=pelucasexpress
 
-# MYSQLDB_LOCAL_PORT=3306
-# MYSQLDB_DOCKER_PORT=3306
+MYSQLDB_LOCAL_PORT=3306
+MYSQLDB_DOCKER_PORT=3306
 # NODE_LOCAL_PORT=3000
 # NODE_DOCKER_PORT=3000
 
