--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,25 +12,25 @@ services:
       MYSQL_ROOT_PASSWORD: $MYSQLDB_ROOT_PASSWORD
     volumes:
       - ./schemas:/var/lib/mysql:rw
-  express:
-    depends_on:
-      - mysqldb
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: express
-    restart: always
-    env_file: ./.env
-    ports:
-      - $NODE_LOCAL_PORT:$NODE_DOCKER_PORT
-    environment:
-      - DB_HOST=$DB_NAME
-      - DB_USER=$MYSQLDB_USER
-      - DB_PASSWORD=$MYSQLDB_ROOT_PASSWORD
-      - DB_NAME=$MYSQLDB_DATABASE
-      # - DB_PORT=$MYSQLDB_DOCKER_PORT
-    links:
-      - mysqldb:mysqldb
+  # express:
+  #   depends_on:
+  #     - mysqldb
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   container_name: express
+  #   restart: always
+  #   env_file: ./.env
+  #   ports:
+  #     - $NODE_LOCAL_PORT:$NODE_DOCKER_PORT
+  #   environment:
+  #     - DB_HOST=$DB_NAME
+  #     - DB_USER=$MYSQLDB_USER
+  #     - DB_PASSWORD=$MYSQLDB_ROOT_PASSWORD
+  #     - DB_NAME=$MYSQLDB_DATABASE
+  #     # - DB_PORT=$MYSQLDB_DOCKER_PORT
+  #   links:
+  #     - mysqldb:mysqldb
 volumes:
   schemas: {}
 
